# natignite-roninhand-bridge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RUNBOOK.md  api.py  mapping.json  pyproject.toml  signals.json  test.py
.github/workflows/: ci.yml
config/: local.yaml
examples/: run_emg_demo.py  send_gesture.py
frontend/: README_frontend.md  bun.lockb  jest.config.mjs  package-lock.json  package.json  proxy.js  tailwind.config.ts  tsconfig.json
frontend/__tests__/: signal-detail.a11y.test.tsx  signals.a11y.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/signals/: page.tsx
frontend/app/signals/[name]/: page.tsx
frontend/components/: ThemeToggle.tsx  a11y.tsx
frontend/components/ui/: rainbow-button.tsx
frontend/lib/: api.ts  query.tsx  toast.tsx  types.ts
gateway/: README_gateway.md  app.py  requirements.txt
gateway-env/: pyvenv.cfg
hardware/: EmgSettings_Bicep_Brow.json  Hardware_Bicep_Brow  data_read.py
src/rhbridge/: cli.py
src/rhbridge/bridge/: ronin_client.py
src/rhbridge/dsp/: filters.py
src/rhbridge/intents/: emg_trigger.py
src/rhbridge/io/: brainflow_reader.py
src/rhbridge/mapper/: map.py
src/rhbridge/ui/: calibrate.py
tests/: test_bridge.py
